--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "next-seo": "^5.15.0",
     "next-sitemap": "^4.0.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.5.1",
@@ -95,7 +96,6 @@
     "semantic-release": "^19.0.5",
     "start-server-and-test": "^2.0.0",
     "storybook": "^7.0.2",
-    "tailwindcss": "^3.3.1",
     "typescript": "^4.9.5"
   },
   "config": {
