--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "next-js-boilerplate",
   "version": "3.9.0",
   "scripts": {
-    "dev": "next dev",
-    "build": "npm run build:books && next build",
+    "next-dev": "next dev",
+    "dev": "run-p contentlayer-dev next-dev",
+    "build": "yarn run contentlayer-build && npm run build:books && next build",
     "start": "next start",
     "build-stats": "cross-env ANALYZE=true npm run build",
     "export": "next export",
     "build-prod": "run-s clean build export",
     "clean": "rimraf .next out",
     "lint": "next lint",
+    "contentlayer-dev": "contentlayer dev",
+    "contentlayer-build": "contentlayer build",
     "format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
     "check-types": "tsc --noEmit --pretty && tsc --project cypress --noEmit --pretty",
     "test": "jest",
@@ -29,81 +32,84 @@
     "build:books": "node ./scripts/books-info.js"
   },
   "dependencies": {
-    "@phosphor-icons/react": "^2.0.9",
+    "@phosphor-icons/react": "^2.0.10",
     "@tailwindcss/typography": "^0.5.9",
-    "next": "^13.3.0",
-    "next-seo": "^5.15.0",
-    "next-sitemap": "^4.0.6",
+    "date-fns": "^2.30.0",
+    "next": "^13.4.9",
+    "next-contentlayer": "0.3.1",
+    "contentlayer": "0.3.1",
+    "next-seo": "^6.1.0",
+    "next-sitemap": "^4.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.5.1",
-    "@commitlint/config-conventional": "^17.4.4",
+    "@commitlint/cli": "^17.6.6",
+    "@commitlint/config-conventional": "^17.6.6",
     "@commitlint/cz-commitlint": "^17.5.0",
-    "@next/bundle-analyzer": "^13.3.0",
-    "@percy/cli": "^1.22.0",
+    "@next/bundle-analyzer": "^13.4.9",
+    "@percy/cli": "^1.26.2",
     "@percy/cypress": "^3.1.2",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@storybook/addon-essentials": "^7.0.2",
-    "@storybook/addon-interactions": "^7.0.2",
-    "@storybook/addon-links": "^7.0.2",
-    "@storybook/blocks": "^7.0.2",
-    "@storybook/nextjs": "^7.0.2",
-    "@storybook/react": "^7.0.2",
-    "@storybook/test-runner": "^0.10.0",
-    "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/addon-essentials": "^7.0.26",
+    "@storybook/addon-interactions": "^7.0.26",
+    "@storybook/addon-links": "^7.0.26",
+    "@storybook/blocks": "^7.0.26",
+    "@storybook/nextjs": "^7.0.26",
+    "@storybook/react": "^7.0.26",
+    "@storybook/test-runner": "^0.11.0",
+    "@storybook/testing-library": "^0.2.0",
     "@testing-library/cypress": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.33",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.4.1",
+    "@types/react": "^18.2.14",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
-    "cssnano": "^6.0.0",
-    "cypress": "^12.9.0",
-    "eslint": "^8.37.0",
+    "cssnano": "^6.0.1",
+    "cypress": "^12.17.0",
+    "eslint": "^8.44.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-next": "^13.3.0",
+    "eslint-config-next": "^13.4.9",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-cypress": "^2.13.2",
+    "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-jest-dom": "^4.0.3",
+    "eslint-plugin-jest": "^27.2.2",
+    "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-storybook": "^0.6.11",
-    "eslint-plugin-tailwindcss": "^3.11.0",
-    "eslint-plugin-testing-library": "^5.10.2",
+    "eslint-plugin-storybook": "^0.6.12",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "eslint-plugin-testing-library": "^5.11.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "http-server": "^14.1.1",
     "husky": "^8.0.3",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "lint-staged": "^13.2.0",
+    "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
+    "lint-staged": "^13.2.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
-    "rimraf": "^4.4.1",
+    "rimraf": "^5.0.1",
     "rss-parser": "^3.13.0",
     "rss-to-json": "^2.1.1",
     "rss-to-json-v2": "^1.0.12",
-    "semantic-release": "^19.0.5",
+    "semantic-release": "^21.0.7",
     "start-server-and-test": "^2.0.0",
-    "storybook": "^7.0.2",
-    "typescript": "^4.9.5"
+    "storybook": "^7.0.26",
+    "typescript": "^5.1.6"
   },
   "config": {
     "commitizen": {
