--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "next-js-boilerplate",
-  "version": "3.9.0",
+  "name": "varunraj-in",
+  "version": "1.0.1",
   "scripts": {
     "next-dev": "next dev",
     "dev": "run-p contentlayer-dev next-dev",
@@ -17,15 +17,6 @@
     "check-types": "tsc --noEmit --pretty && tsc --project cypress --noEmit --pretty",
     "test": "jest",
     "commit": "cz",
-    "cypress": "cypress open",
-    "cypress:headless": "cypress run",
-    "e2e": "start-server-and-test dev http://localhost:3000 cypress",
-    "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless",
-    "storybook": "storybook dev -p 6006",
-    "storybook:build": "storybook build",
-    "storybook:serve": "http-server storybook-static --port 6006 --silent",
-    "serve-storybook": "run-s storybook:*",
-    "test-storybook:ci": "start-server-and-test serve-storybook http://localhost:6006 test-storybook",
     "prepare": "husky install",
     "postbuild": "next-sitemap",
     "get:books": "node ./scripts/rss-to-json.js",
@@ -49,20 +40,6 @@
     "@commitlint/config-conventional": "^17.6.6",
     "@commitlint/cz-commitlint": "^17.5.0",
     "@next/bundle-analyzer": "^13.4.9",
-    "@percy/cli": "^1.26.2",
-    "@percy/cypress": "^3.1.2",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@storybook/addon-essentials": "^7.0.26",
-    "@storybook/addon-interactions": "^7.0.26",
-    "@storybook/addon-links": "^7.0.26",
-    "@storybook/blocks": "^7.0.26",
-    "@storybook/nextjs": "^7.0.26",
-    "@storybook/react": "^7.0.26",
-    "@storybook/test-runner": "^0.11.0",
-    "@storybook/testing-library": "^0.2.0",
-    "@testing-library/cypress": "^9.0.0",
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.4.1",
@@ -74,13 +51,11 @@
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
     "cssnano": "^6.0.1",
-    "cypress": "^12.17.0",
     "eslint": "^8.44.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-next": "^13.4.9",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.2",
     "eslint-plugin-jest-dom": "^5.0.1",
@@ -90,7 +65,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-storybook": "^0.6.12",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-testing-library": "^5.11.0",
     "eslint-plugin-unused-imports": "^2.0.0",
@@ -106,7 +80,6 @@
     "rss-parser": "^3.13.0",
     "rss-to-json": "^2.1.1",
     "rss-to-json-v2": "^1.0.12",
-    "semantic-release": "^21.0.7",
     "start-server-and-test": "^2.0.0",
     "storybook": "^7.0.26",
     "typescript": "^5.1.6"
@@ -115,24 +88,5 @@
     "commitizen": {
       "path": "@commitlint/cz-commitlint"
     }
-  },
-  "release": {
-    "branches": [
-      "main"
-    ],
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/changelog",
-      [
-        "@semantic-release/npm",
-        {
-          "npmPublish": false
-        }
-      ],
-      "@semantic-release/git",
-      "@semantic-release/github"
-    ]
-  },
-  "author": "Ixartz (https://github.com/ixartz)"
+  }
 }
