feat: overall cleanup
Signed-off-by: Varun Raj <varun@skcript.com>

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "contentlayer-dev": "contentlayer dev",
     "contentlayer-build": "contentlayer build",
     "format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
-    "check-types": "tsc --noEmit --pretty && tsc --project cypress --noEmit --pretty",
+    "check-types": "tsc --noEmit --pretty",
     "test": "jest",
     "commit": "cz",
     "prepare": "husky install",
@@ -25,10 +25,11 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.0.10",
     "@tailwindcss/typography": "^0.5.9",
+    "clsx": "^1.2.1",
+    "contentlayer": "0.3.1",
     "date-fns": "^2.30.0",
     "next": "^13.4.9",
     "next-contentlayer": "0.3.1",
-    "contentlayer": "0.3.1",
     "next-seo": "^6.1.0",
     "next-sitemap": "^4.1.8",
     "react": "^18.2.0",
