--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reading-time": "^1.5.0",
+    "sass": "^1.69.4",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
